feat: add swagger for all user routes
